Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-11177

mysqlbinlog exits silently without error when another instance connects to server

    XMLWordPrintable

Details

    • 10.2.4-4, 10.2.4-5, 10.2.5-1

    Description

      When mysqlbinlog reads binlogs from a remote server (with stop-never), it connects to the server with a certain ID, either default or explicitly set. If another instance of mysqlbinlog connects with the same ID, the previous one exits. In MySQL, it returns a non-zero exit code and a clear enough error message:

      ERROR: Got error reading packet from server: A slave with the same server_uuid/server_id as this slave has connected to the master; the first event 'mysql-bin.000001' at 4, the last event read from './mysql-bin.000051' at 4700, the last byte read from './mysql-bin.000051' at 4700.
      

      In MariaDB, it exits silently with success code and without error messages. It's dangerous, because it will make user believe all logs have been stored.

      Attachments

        Issue Links

          Activity

            People

              holyfoot Alexey Botchkov
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 1d Original Estimate - 1d
                  1d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 1h
                  1d 1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.