MDEV-11177 mysqlbinlog exits silently without error when another instance connects to server.

New thread kill status added KILL_SLAVE_SAME_ID, and the related
        error message.